--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -19,6 +19,54 @@
         {
             "key": "slime-die",
             "value": "Твій слайм помер. Створи нового і продовжуй гру!"
+        },
+        {
+            "key": "simple-lightning",
+            "value": "Блискавка"
+        },
+        {
+            "key": "simple-lightning-description",
+            "value": "Проста, але ефективна магія блискавки, яка дозволяє отримати невелику кількість енергії."
+        },
+        {
+            "key": "lightning-storm",
+            "value": "Блискавичний шторм"
+        },
+        {
+            "key": "lightning-storm-description",
+            "value": "Магія середнього рівня, яка призиває велику кількість електричних розрядів. Цієї енергії вистачить, щоб зарядити простенький ноутбук."
+        },
+        {
+            "key": "lightning-shield",
+            "value": "Щит із блискавок"
+        },
+        {
+            "key": "lightning-shield-description",
+            "value": "Найкращий захист - це напад.Ця магія збирає бушуючі блискавки в одному місці і отримує від них енергію. Не атомна станція, але теж непогано."
+        },
+        {
+            "key": "lightning-power",
+            "value": "Сила блискавки"
+        },
+        {
+            "key": "lightning-power-description",
+            "value": "Пізнавши суть цього світу, маг з легкістю може ловити блискавки голими руками і витягувати енергію із самих небес. На які жертви тільки не підеш, щоб зарядити теслу..."
+        },
+        {
+            "key": "lightning-rod",
+            "value": "Блискавичний жезл"
+        },
+        {
+            "key": "lightning-rod-description",
+            "value": "Могучий артефакт, який збільшує загальну силу мага в 100 разів. Ні! У 1000 разів."
+        },
+        {
+            "key": "lightning-core",
+            "value": "Ядро блискавки"
+        },
+        {
+            "key": "lightning-core-description",
+            "value": "Вершина магії блискавок. Потужна як 500 атомних станцій, коштує як 5000. Дозволяє отримувати енергію просто із повітря."
         }
     ]
 }
