--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -67,6 +67,14 @@
         {
             "key": "lightning-core-description",
             "value": "Вершина магії блискавок. Потужна як 500 атомних станцій, коштує як 5000. Дозволяє отримувати енергію просто із повітря."
+        },
+        {
+            "key": "energy-per",
+            "value": "Кількість енергії, яка отримується за секунду"
+        },
+        {
+            "key": "price",
+            "value": "Ціна покращення"
         }
     ]
 }
