--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -75,6 +75,10 @@
         {
             "key": "price",
             "value": "Ціна покращення"
+        },
+        {
+            "key": "name-length",
+            "value": "Ім'я слайма повинне складатися з більшої кількості літер"
         }
     ]
 }
