Added shield and relife items in shop

--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
@@ -14,11 +14,11 @@
         },
         {
             "key": "game-over",
-            "value": "Game Over"
+            "value": "Game Over1"
         },
         {
             "key": "slime-die",
-            "value": "Your slime died. Create new one"
+            "value": "Your slime died. Create new one1"
         },
         {
             "key": "simple-lightning",
