--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -127,6 +127,26 @@
         {
             "key": "shop-re-life-other",
             "value": "Поточна кількість перероджень"
+        },
+        {
+            "key": "slime",
+            "value": "Слайм"
+        },
+        {
+            "key": "level",
+            "value": "Рівень"
+        },
+        {
+            "key": "energy",
+            "value": "Енергія"
+        },
+        {
+            "key": "name",
+            "value": "Ім'я"
+        },
+        {
+            "key": "your-slimes",
+            "value": "Твої слайми"
         }
     ]
 }
