--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -147,6 +147,82 @@
         {
             "key": "your-slimes",
             "value": "Твої слайми"
+        },
+        {
+            "key": "story-frame1",
+            "value": "Колись давно, у світі, наповненому орками та магією"
+        },
+        {
+            "key": "story-frame2",
+            "value": "Жив собі відомий чарівник на ім'я Мерлін. Він був найвправнішим чарівником на всій землі і міг вичаклувати все, що тільки забажає"
+        },
+        {
+            "key": "story-frame3",
+            "value": "Одного дня орки вирішили здійснити серію ракетних атак на сусіднє місто, спричинивши масштабний хаос і повне відключення електроенергії"
+        },
+        {
+            "key": "story-frame4",
+            "value": "Люди залишилися в темряві, без електрики та будь-якого способу живити свої будинки та підприємства. Місцева влада не знала, що робити, аж поки не втрутився Мерлін"
+        },
+        {
+            "key": "story-frame5",
+            "value": "Мерлін, будучи геніальним чарівником, вирішив використати свою магію для створення нового джерела електроенергії"
+        },
+        {
+            "key": "story-frame6",
+            "value": "Він почав з дослідження параметрів слизу і виявив, що він має магічні властивості, які можуть генерувати потужний заряд"
+        },
+        {
+            "key": "story-frame7",
+            "value": "Не гаючи часу, Мерлін взявся до роботи, збираючи магічний слиз з найнеймовірнішого джерела - гігантських равликів, що бродили довколишніми болотами"
+        },
+        {
+            "key": "story-frame8",
+            "value": "Кажуть, що слиз равликів містить великий рівень магії і може генерувати потужний електричний заряд"
+        },
+        {
+            "key": "story-frame9",
+            "value": "Мерлін зібрав слиз і почав експериментувати. За допомогою магії він перетворив слиз на струмопровідний гель і використав його для живлення цілого міста"
+        },
+        {
+            "key": "story-frame10",
+            "value": "В результаті вийшло яскраве і стійке світіння, яке освітило вулиці, будинки і підприємства"
+        },
+        {
+            "key": "story-frame11",
+            "value": "Люди були вражені, а Мерлін миттєво став героєм. Він навіть запатентував свій винахід і почав продавати баночки з чарівним слизом людям, які хотіли виробляти власну електроенергію"
+        },
+        {
+            "key": "story-frame12",
+            "value": "Незабаром орки припинили напад, а електромережу було відновлено"
+        },
+        {
+            "key": "story-frame13",
+            "value": "Однак люди не хотіли відмовлятися від чарівного слизу. Він став модною річчю, і жителі використовували його для живлення всього - від смартфонів до автомобілів"
+        },
+        {
+            "key": "story-frame14",
+            "value": "Мерлін, будучи кмітливим бізнесменом, вирішив запустити власну лінію продуктів з чарівного слизу, включаючи шампунь, мило та зубну пасту"
+        },
+        {
+            "key": "story-frame15",
+            "value": "Він навіть запустив власну лінію одягу, в якій був одяг, повністю виготовлений зі слизу. Так Мерлін став не лише відомим магом, а й успішним підприємцем"
+        },
+        {
+            "key": "story-frame16",
+            "value": "Завдяки винайденому ним чарівному слизу місто освітилося, життя людей змінилося, а світ став яскравішим"
+        },
+        {
+            "key": "story-frame17",
+            "value": "Кінець! Почни виробляти власну електроенергію!"
+        },
+        {
+            "key": "skip",
+            "value": "Пропустити"
+        },
+        {
+            "key": "story-generated",
+            "value": "Історію, текст, музику, зображення та голос згенерував штучний інтелект"
         }
     ]
 }
