Added login and register scene
But unity editor crashes after using firestore

--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -223,6 +223,86 @@
         {
             "key": "story-generated",
             "value": "Історію, текст, музику, зображення та голос згенерував штучний інтелект"
+        },
+        {
+            "key": "login",
+            "value": "Вхід"
+        },
+        {
+            "key": "some-errors-login",
+            "value": "Під час входу виникла невідома помилка, спробуйте повторити дію пізніше"
+        },
+        {
+            "key": "doesnt-exist",
+            "value": "Користувач з введеними параметрами не існує"
+        },
+        {
+            "key": "invalid-email",
+            "value": "Введена неправильна електронна пошта"
+        },
+        {
+            "key": "register",
+            "value": "Реєстрація"
+        },
+        {
+            "key": "some-error-register",
+            "value": "Під час реєстрації виникла невідома помилка, спробуйте повторити дію пізніше"
+        },
+        {
+            "key": "already-exists",
+            "value": "Користувач з введеними даними вже існує"
+        },
+        {
+            "key": "enter-username",
+            "value": "Введіть ім'я користувача"
+        },
+        {
+            "key": "enter-email",
+            "value": "Введіть електонну адресу"
+        },
+        {
+            "key": "enter-password",
+            "value": "Введіть пароль"
+        },
+        {
+            "key": "repeat-password",
+            "value": "Повторіть пароль"
+        },
+        {
+            "key": "log-in-first",
+            "value": "Щоб отримати інформацію про акаунт, спочатку увійдіть"
+        },
+        {
+            "key": "username",
+            "value": "Ім'я користувача"
+        },
+        {
+            "key": "max-energy",
+            "value": "Макс. енергія"
+        },
+        {
+            "key": "max-level",
+            "value": "Макс. рівень"
+        },
+        {
+            "key": "slimes-count",
+            "value": "Кількість слизнів"
+        },
+        {
+            "key": "registration-date",
+            "value": "Дата реєстрації"
+        },
+        {
+            "key": "log-out",
+            "value": "Вийти"
+        },
+        {
+            "key": "go",
+            "value": "Підтвердити"
+        },
+        {
+            "key": "skip-next",
+            "value": "Пропустити наступного разу"
         }
     ]
 }
