--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -302,7 +302,19 @@
         },
         {
             "key": "skip-next",
-            "value": "Пропустити наступного разу"
+            "value": "Пропустити передісторію наступного разу"
+        },
+        {
+            "key": "sound-volume",
+            "value": "Гучність звуків"
+        },
+        {
+            "key": "music-volume",
+            "value": "Гучність музики"
+        },
+        {
+            "key": "language",
+            "value": "Мова"
         }
     ]
 }
