Changed hat buying

--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
@@ -315,6 +315,10 @@
         {
             "key": "language",
             "value": "Language"
+        },
+        {
+            "key": "buy",
+            "value": "Buy"
         }
     ]
 }
