--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -315,6 +315,10 @@
         {
             "key": "language",
             "value": "Мова"
+        },
+        {
+            "key": "buy",
+            "value": "Купити"
         }
     ]
 }
