Added version control

--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
@@ -319,6 +319,10 @@
         {
             "key": "buy",
             "value": "Buy"
+        },
+        {
+            "key": "update",
+            "value": "You are downloading an outdated version, please update the game"
         }
     ]
 }
