--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -319,6 +319,10 @@
         {
             "key": "buy",
             "value": "Купити"
+        },
+        {
+            "key": "update",
+            "value": "У вас завантаження застаріла версія, Обновіть, будь ласка, гру"
         }
     ]
 }
