--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -323,6 +323,46 @@
         {
             "key": "update",
             "value": "У вас завантаження застаріла версія, Обновіть, будь ласка, гру"
+        },
+        {
+            "key": "global-mode",
+            "value": "Глобальний режим"
+        },
+        {
+            "key": "global-describe",
+            "value": "Грай з усіма гравцями та отримуй кубки та діаманти"
+        },
+        {
+            "key": "private-mode",
+            "value": "Приватний режим"
+        },
+        {
+            "key": "private-describe",
+            "value": "Грайте з друзями та отримуйте задоволення"
+        },
+        {
+            "key": "login-required",
+            "value": "Потрібна авторизація"
+        },
+        {
+            "key": "result",
+            "value": "Результат"
+        },
+        {
+            "key": "winner",
+            "value": "Переможець!"
+        },
+        {
+            "key": "loser",
+            "value": "Програвший!"
+        },
+        {
+            "key": "choose-attack",
+            "value": "Виберіть сторону атаки"
+        },
+        {
+            "key": "choose-block",
+            "value": "Виберіть сторону захисту"
         }
     ]
 }
