--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -363,6 +363,22 @@
         {
             "key": "choose-block",
             "value": "Виберіть сторону захисту"
+        },
+        {
+            "key": "play",
+            "value": "Грати"
+        },
+        {
+            "key": "code-description",
+            "value": "Надішліть цей код другу, щоб він підключився до вас. \nКод скопійовано до вашого буфера обміну"
+        },
+        {
+            "key": "code-not-found",
+            "value": "Код не знайдено! Спробуйте ще раз"
+        },
+        {
+            "key": "fail-create-room",
+            "value": "Виникла помилка під час створення кімнати! Спробуйте ще раз"
         }
     ]
 }
