Added connecting to private room

--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/en_US.json
@@ -403,6 +403,14 @@
         {
             "key": "room-not-found",
             "value": "Room wasn't found!"
+        },
+        {
+            "key": "room-error",
+            "value": "There was an error. Please try again later!"
+        },
+        {
+            "key": "back",
+            "value": "Back"
         }
     ]
 }
