--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -390,7 +390,7 @@
         },
         {
             "key": "connect-to-room",
-            "value": "Під'єднатися до існуючої кімнати"
+            "value": "Під'єднатися до кімнати"
         },
         {
             "key": "enter-room-code",
@@ -403,6 +403,14 @@
         {
             "key": "room-not-found",
             "value": "Кімнату не знайдено!"
+        },
+        {
+            "key": "room-error",
+            "value": "Виникла деяка помилка. Спробуй повторити пізніше!"
+        },
+        {
+            "key": "back",
+            "value": "Назад"
         }
     ]
 }
