--- a/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/Magical slime. Triple choice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -229,7 +229,7 @@
             "value": "Вхід"
         },
         {
-            "key": "some-errors-login",
+            "key": "some-error-login",
             "value": "Під час входу виникла невідома помилка, спробуйте повторити дію пізніше"
         },
         {
@@ -411,6 +411,42 @@
         {
             "key": "back",
             "value": "Назад"
+        },
+        {
+            "key": "some-error-database",
+            "value": "Перевірте з'єднання з інтернетом або повторіть спробу пізніше"
+        },
+        {
+            "key": "cups",
+            "value": "Кубки"
+        },
+        {
+            "key": "current-slime",
+            "value": "Останній слайм"
+        },
+        {
+            "key": "account",
+            "value": "Дані з акаунта"
+        },
+        {
+            "key": "device",
+            "value": "Дані з пристрою"
+        },
+        {
+            "key": "from-account",
+            "value": "Обрати дані з акаунта"
+        },
+        {
+            "key": "from-device",
+            "value": "Обрати дані з пристрою"
+        },
+        {
+            "key": "merge-slimes",
+            "value": "Об'єднати"
+        },
+        {
+            "key": "data-conflict",
+            "value": "Дані на пристрої та в акаунті не збігаються. Виберіть одне з наступних рішень: зберегти тільки дані облікового запису; зберегти тільки дані пристрою; зберегти кількість діамантів і кришок з даних облікового запису, вибрати найбільші значення для максимальних значень, об'єднати списки слімів, зберегти всі інші дані з пристрою"
         }
     ]
 }
