--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -447,6 +447,10 @@
         {
             "key": "data-conflict",
             "value": "Дані на пристрої та в акаунті не збігаються. Виберіть одне з наступних рішень: зберегти тільки дані облікового запису; зберегти тільки дані пристрою; зберегти кількість діамантів і кубків з даних облікового запису, вибрати найбільші значення для максимальних значень, об'єднати списки слімів, зберегти всі інші дані з пристрою"
+        },
+        {
+            "key": "rating",
+            "value": "РЕЙТИНГ"
         }
     ]
 }
