Fixed bug with choice auto select
For ctoping coroutine need save it to variable and stop coroutine  using variable instead of creating new coroutine

--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -451,6 +451,18 @@
         {
             "key": "rating",
             "value": "РЕЙТИНГ"
+        },
+        {
+            "key": "yes",
+            "value": "ТАК"
+        },
+        {
+            "key": "no",
+            "value": "НІ"
+        },
+        {
+            "key": "leave-question",
+            "value": "Ти точно хочеш вийти? Ти програєш і не зможеш повернутися!"
         }
     ]
 }
