--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
@@ -451,6 +451,18 @@
         {
             "key": "rating",
             "value": "RATING"
+        },
+        {
+            "key": "yes",
+            "value": "YES"
+        },
+        {
+            "key": "no",
+            "value": "NO"
+        },
+        {
+            "key": "leave-question",
+            "value": "Are you sure you want to leave? You'll lose and won't be able to come back!"
         }
     ]
 }
