--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -463,6 +463,10 @@
         {
             "key": "leave-question",
             "value": "Ти точно хочеш вийти? Ти програєш і не зможеш повернутися!"
+        },
+        {
+            "key": "search-going",
+            "value": "Триває пошук. Якщо вийти з додатка, то пошук може припиниться"
         }
     ]
 }
