Create firebase manager

--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -467,6 +467,10 @@
         {
             "key": "search-going",
             "value": "Триває пошук. Якщо вийти з додатка, то пошук може припиниться"
+        },
+        {
+            "key": "round",
+            "value": "Раунд"
         }
     ]
 }
