--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
@@ -467,6 +467,10 @@
         {
             "key": "search-going",
             "value": "The search is ongoing. If you exit the app, the search may stop"
+        },
+        {
+            "key": "round",
+            "value": "Round"
         }
     ]
 }
