Added slime resurrect

--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/en_US.json
@@ -471,6 +471,18 @@
         {
             "key": "round",
             "value": "Round"
+        },
+        {
+            "key": "leave",
+            "value": "Leave"
+        },
+        {
+            "key": "resurrect",
+            "value": "Resurrect"
+        },
+        {
+            "key": "resurrect-question",
+            "value": "You can resurrect your slime for a certain amount of diamonds!"
         }
     ]
 }
