--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -471,6 +471,18 @@
         {
             "key": "round",
             "value": "Раунд"
+        },
+        {
+            "key": "leave",
+            "value": "Вийти"
+        },
+        {
+            "key": "resurrect",
+            "value": "Воскресити"
+        },
+        {
+            "key": "resurrect-question",
+            "value": "Ти можеш воскресити свого слайма за певну кількість діамантів!"
         }
     ]
 }
