--- a/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
+++ b/MagicalSlime.TripleChoice/Assets/StreamingAssets/Languages/uk_UK.json
@@ -483,6 +483,22 @@
         {
             "key": "resurrect-question",
             "value": "Ти можеш воскресити свого слайма за певну кількість діамантів!"
+        },
+        {
+            "key": "enemy-leave",
+            "value": "Противник покинув кімнату"
+        },
+        {
+            "key": "max-health",
+            "value": "Максимальне здоров'я:"
+        },
+        {
+            "key": "convert",
+            "value": "Перевести"
+        },
+        {
+            "key": "close",
+            "value": "Закрити"
         }
     ]
 }
